First version of so so working state lacking proper unit tests, unoptimized code etc. do distribution or pipelines yet